# OpenGLDemo

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/demo/opengl/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: cube.fs  cube.vs  texture.fs
app/src/main/java/com/demo/opengl/: DemoApplication.java
app/src/main/java/com/demo/opengl/activity/: BaseCameraActivity.java  BeautyActivity.java  ColorFilterActivity.java  CubeActivity.kt  FaceDetectActivity.java  MainActivity.kt  PlayerActivity.java  SimpleTextureActivity.kt
app/src/main/java/com/demo/opengl/entity/: GLBuffer.java  GLPoint.java
app/src/main/java/com/demo/opengl/filter/: GLImageBlackWhiteFilter.java  GLImageColdFilter.java  GLImageFilter.java  GLImageGaussPassFilter.java  GLImageGaussianBlurFilter.java  GLImageGroupFilter.java  GLImageMosaicFilter.java  GLImageNegativeFilter.java  GLImageNostalgiaFilter.java  GLImageOESInputFilter.java
app/src/main/java/com/demo/opengl/filter/beauty/: GLImageBeautyAdjustFilter.java  GLImageBeautyBlurFilter.java  GLImageBeautyComplexionFilter.java  GLImageBeautyFilter.java  GLImageBeautyHighPassFilter.java  GLImageOldBeautyFilter.java
app/src/main/java/com/demo/opengl/filter/beauty/bean/: BeautyParam.java  IBeautify.java
app/src/main/java/com/demo/opengl/render/: BaseRender.java  BeautyRender.java  ColorRender.java  FacePointRender.java  SimpleCubeRender.kt  SimpleTextureRender.kt
app/src/main/java/com/demo/opengl/utils/: BitmapUtils.java  ConverUtil.java  MatrixHelper.java  OpenGLUtils.java  RenderUtil.java  ResReadUtils.java  Rotation.java  ShaderUtils.java  TextureRotationUtils.java  Util.kt
app/src/main/java/zeusees/tracking/: FaceTracking.java
app/src/main/jni/ffmpeg/: callJava.cpp  callJava.h  common.h  ffmpeg.cpp  opensl.cpp  opensl.h  player.cpp
app/src/main/jni/ffmpeg/include/: ffmpeg.h
app/src/main/res/layout/: activity_camera.xml  activity_colorfilter.xml  activity_cube.xml  activity_face.xml  activity_main.xml  activity_player.xml  activity_simple_texture.xml
app/src/main/res/raw/: face_vertext_point_shader.glsl  fragment_black.glsl  fragment_cold.glsl  fragment_mosaic.glsl  fragment_negative.glsl  fragment_nostalgia.glsl  fragment_point_shader.glsl
app/src/main/res/values/: styles.xml
app/src/test/java/com/demo/opengl/: ExampleUnitTest.kt
ffmpeglib/: CMakeLists.txt  build.gradle
ffmpeglib/src/androidTest/java/com/deomo/ffmpeglib/: ExampleInstrumentedTest.java
ffmpeglib/src/main/: AndroidManifest.xml
ffmpeglib/src/main/java/com/deomo/ffmpeglib/: Player.java
ffmpeglib/src/main/jni/ffmpeg/: common.cpp  ffmpeg.h  opensl.h  player.cpp
ffmpeglib/src/main/jni/ffmpeg/include/: cmdutils.h  config.h
ffmpeglib/src/main/jni/ffmpeg/soundtouch/include/: STTypes.h
ffmpeglib/src/test/java/com/deomo/ffmpeglib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
